--- a/Machine Learning/Redes Supervisionadas - Perceptron, MLP.ipynb
+++ b/Machine Learning/Redes Supervisionadas - Perceptron, MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Perceptron()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# instanciando o perceptron\n",
+    "pctrn = Perceptron(tol=1e-3, random_state=0)\n",
+    "\n",
+    "# treinando o perceptron\n",
+    "pctrn.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gusta\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:585: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (300) reached and the optimization hasn't converged yet.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(max_iter=300, random_state=1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# instanciando o mlp\n",
+    "mlp = MLPClassifier(random_state=1, max_iter=300)\n",
+    "\n",
+    "# treinando o mlp\n",
+    "mlp.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Desempenho perceptron: 0.5555555555555556\n",
+      "Desempenho MLP: 0.9777777777777777\n"
+     ]
+    }
+   ],
+   "source": [
+    "# avaliando os classificadores\n",
+    "print(\"Desempenho perceptron:\", accuracy_score(y_test, pctrn.predict(X_test)))\n",
+    "print(\"Desempenho MLP:\", accuracy_score(y_test, mlp.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#\n",
-    "pctrn = Perceptron(tol=1e-3, random_state=0)\n",
-    "pctrn.fit(X, y)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
