correção treinamento mlp e perceptron

--- a/Machine Learning/Redes Supervisionadas - Perceptron, MLP.ipynb
+++ b/Machine Learning/Redes Supervisionadas - Perceptron, MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "Perceptron()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,12 +48,12 @@
     "pctrn = Perceptron(tol=1e-3, random_state=0)\n",
     "\n",
     "# treinando o perceptron\n",
-    "pctrn.fit(X, y)"
+    "pctrn.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "MLPClassifier(max_iter=300, random_state=1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,20 +80,20 @@
     "mlp = MLPClassifier(random_state=1, max_iter=300)\n",
     "\n",
     "# treinando o mlp\n",
-    "mlp.fit(X, y)"
+    "mlp.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Desempenho perceptron: 0.5555555555555556\n",
-      "Desempenho MLP: 0.9777777777777777\n"
+      "Desempenho perceptron: 0.8\n",
+      "Desempenho MLP: 0.9555555555555556\n"
      ]
     }
    ],
@@ -102,13 +102,6 @@
     "print(\"Desempenho perceptron:\", accuracy_score(y_test, pctrn.predict(X_test)))\n",
     "print(\"Desempenho MLP:\", accuracy_score(y_test, mlp.predict(X_test)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
